# omnivoice.cpp

./: .gitignore  CMakeLists.txt  README.md  checkpoints.sh  convert.py  models.sh  quantize.sh
cmake/: omnivoice.pc.in  omnivoiceConfig.cmake.in
docs/: ARCHITECTURE.md
examples/: clone.cmd  clone.sh  tts.cmd  tts.sh
src/: audio-io.h  audio-postproc-stream.h  audio-resample.h  backend.h  bpe.h  dac-decoder.h  dac-encoder.h  debug.h  gguf-weights.h  hubert-enc.h  maskgit-tts.h  omnivoice-llm.h  omnivoice.cpp  omnivoice.h  ov-error.h  philox.h  pipeline-codec.cpp  pipeline-codec.h  pipeline-tts.cpp  pipeline-tts.h  prompt-tts.h  qwen3-enc.h  rvq-codec.h  semantic-enc.h  text-chunker-stream.h  text-chunker.h  voice-design.h
tests/: abi-c.c  cross-decode.py  debug-clone-cossim.py  debug-encode-roundtrip-cossim.py  debug-llm-forward-cossim.py  debug-maskgit-cossim.py  debug-tts-audio-cossim.py  debug-tts-cossim.py  prompt.txt  ref-text.txt
tools/: omnivoice-codec.cpp  omnivoice-tts.cpp  quantize.cpp  version.cmake
